// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders snapshot of App 1`] = `
<div>
  <h1>
    My Hacker Stories
  </h1>
  <form>
    <label
      for="search"
    >
      <strong>
        Search:
      </strong>
    </label>
     
    <input
      id="search"
      type="text"
      value="JavaScript"
    />
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
  <hr />
  <p>
    Loading ...
  </p>
</div>
`;

exports[`List renders snapshot of List 1`] = `
<div>
  <span>
    <a
      href="https://reactjs.org/"
    >
      React
    </a>
  </span>
  <span>
    Jordan Walke
  </span>
  <span>
    3
  </span>
  <span>
    4
  </span>
  <span>
    <button
      type="button"
    >
      Dismiss
    </button>
  </span>
</div>
`;

exports[`SearchForm renders snapshot of SearchForm 1`] = `
<form>
  <label
    for="search"
  >
    <strong>
      Search:
    </strong>
  </label>
   
  <input
    id="search"
    type="text"
    value="React"
  />
  <button
    type="submit"
  >
    Submit
  </button>
</form>
`;
